Update all references of ORCiD to ORCID

--- a/templates/account_settings_pages/_update-account.html
+++ b/templates/account_settings_pages/_update-account.html
@@ -1,7 +1,7 @@
 
 {% extends 'account-settings-base.html' %} {% load static %} {% block account_settings %}
 
-<!-- Import ORCiD widget -->
+<!-- Import ORCID widget -->
 <script src="{% static 'javascript/orcid-widget.js' %}" type="text/javascript" defer></script>
 
 <div class="flex-this space-between">
@@ -197,9 +197,9 @@
             </div>
         {% endif %}
 
-        <!-- Researcher: ORCiD -->
+        <!-- Researcher: ORCID -->
         <div>
-            <div><h3>ORCiD</h3></div>
+            <div><h3>ORCID</h3></div>
             <div class="w-100 mb-16">
                 {% if researcher.orcid %}
                 <div class="flex-this space-between">
@@ -235,14 +235,14 @@
                     </div>
 
                     <div>
-                        <a class="primary-btn white-btn" href="{% url 'disconnect-orcid' %}">Disconnect ORCiD</a>
+                        <a class="primary-btn white-btn" href="{% url 'disconnect-orcid' %}">Disconnect ORCID</a>
                     </div>
                 </div>
 
             {% else %}
                 <div class="flex-this space-between">
-                    <div class="w-50"><p>We encourage you to have an ORCiD ID. <br>You can <a class="darkteal-text underline-hover" href="https://orcid.org/" target="_blank" rel="noopener">read more about ORCiD here</a>.</p></div>
-                    <!-- Show ORCiD widget based on hostname -->
+                    <div class="w-50"><p>We encourage you to have an ORCID ID. <br>You can <a class="darkteal-text underline-hover" href="https://orcid.org/" target="_blank" rel="noopener">read more about ORCID here</a>.</p></div>
+                    <!-- Show ORCID widget based on hostname -->
                     <div
                         id="orcidWidget"
                         {% if env == "PROD" %}
@@ -263,7 +263,7 @@
                 </div>
 
                 {% if env == "DEV" or env == "SANDBOX" %}
-                    <small class="bold">Please note that since this is a test site, the ORCiD used will be the <a class="darkteal-text underline-hover" href="https://sandbox.orcid.org/">sandbox version</a>.</small><br>
+                    <small class="bold">Please note that since this is a test site, the ORCID used will be the <a class="darkteal-text underline-hover" href="https://sandbox.orcid.org/">sandbox version</a>.</small><br>
                 {% endif %}
             {% endif %}
 
