--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
         <link rel="stylesheet" type="text/css" href="{% static 'css/headers_footers.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/modals.css' %}">
-        <!-- ORCiD Widget -->
+        <!-- ORCID Widget -->
         <link rel="stylesheet" type="text/css" href="{% static 'css/orcid-widget.css' %}">
         
         <title>Local Contexts | {% block title %} {% endblock %}</title>
