--- a/templates/partials/infocards/_account-dashcard.html
+++ b/templates/partials/infocards/_account-dashcard.html
@@ -156,7 +156,7 @@
                             height="16px"
                             alt="ORCID iD icon"
                         >
-                            <small>No ORCiD specified</small>
+                            <small>No ORCID specified</small>
                     </div>
                 {% endif %}
 
