--- a/templates/snippets/emails/internal/researcher-account-connection.html
+++ b/templates/snippets/emails/internal/researcher-account-connection.html
@@ -22,7 +22,7 @@
         <td>{% if researcher.website %} {{ researcher.website }} {% else %} None provided {% endif %}</td>
     </tr>
     <tr>
-        <th>ORCiD:</th>
+        <th>ORCID:</th>
         <td>{% if researcher.orcid %} {{ researcher.orcid }} {% else %} None provided {% endif %}</td>
     </tr>
 </table>
