Updated UI in projects gallery and project actions

--- a/localcontexts/static/css/main.css
+++ b/localcontexts/static/css/main.css
@@ -1845,3 +1845,7 @@ i[data-tooltip]:hover:after {
     background-color: #EF6C00;
     color: #fff;
 }
+
+.right-auto {
+    right: auto !important 
+}
