--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -84,6 +84,17 @@
                     </p></div>
                 </div>
             {% endif %}
+            {% if project.source_project_uuid %}
+                <div class="flex-this">
+                    <div class="project-left-sidebar"><p class="bold">Level</p></div>
+                    <div>
+                        <p>
+                            <i class="fa-regular fa-diagram-subtask mr-5"></i>Sub Project
+                        
+                        </p>
+                    </div>
+                </div>
+            {% endif %}
         </div>
 
         <div>
