--- a/templates/account-settings-base.html
+++ b/templates/account-settings-base.html
@@ -73,15 +73,17 @@
                     </a>
                 {% endif %}
 
-                {% if institution or researcher and envi != "SANDBOX" %}
-                <a class="side-nav-a" href="{% if institution %}{% url 'subscription' institution.id 'institution' %}{% else %}{% url 'subscription' researcher.id 'researcher' %}{% endif %}">
-                        <div class="flex-this  side-nav-item {% if 'subscription' in request.path %} selected {% else %} grey-text {% endif %}">
-                            <div class="w-20 margin-right-8"><i class="fa fa-calendar-check-o fa-3x" aria-hidden="true"></i></div>
-                            <div class="w-80">
-                                <p class="mt-0"><strong>Subscription</strong><br>Subscription details and activity</p>
+                {% if institution or researcher %}
+                    {% if envi != "SANDBOX" %}
+                        <a class="side-nav-a" href="{% if institution %}{% url 'subscription' institution.id 'institution' %}{% else %}{% url 'subscription' researcher.id 'researcher' %}{% endif %}">
+                            <div class="flex-this  side-nav-item {% if 'subscription' in request.path %} selected {% else %} grey-text {% endif %}">
+                                <div class="w-20 margin-right-8"><i class="fa fa-calendar-check-o fa-3x" aria-hidden="true"></i></div>
+                                <div class="w-80">
+                                    <p class="mt-0"><strong>Subscription</strong><br>Subscription details and activity</p>
+                                </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                    {% endif %}
                 {% endif %}
 
                 <!-- Manage API Keys -->
