--- a/templates/partials/headers/header-content.html
+++ b/templates/partials/headers/header-content.html
@@ -11,12 +11,14 @@
             <div class='menu-button'></div>
         </label>
         <ul class="menu ul-no-bullets">
-            <li>
-                <a 
-                    class="{% if '/subscription-inquiry/' in request.path %} active-link bold {% endif %} white-text upper" 
-                    href="{% url 'subscription-inquiry' %}"> Subscription
-                </a>
-            </li> 
+            {% if not 'sandbox' in request.get_host %}
+                <li>
+                    <a
+                        class="{% if '/subscription-inquiry/' in request.path %} active-link bold {% endif %} white-text upper" 
+                        href="{% url 'subscription-inquiry' %}"> Subscription
+                    </a>
+                </li>
+            {% endif %}
             <li>
                 <a 
                     class="{% if '/registry/' in request.path %} active-link bold {% endif %} white-text upper" 
