--- a/templates/account-settings-base.html
+++ b/templates/account-settings-base.html
@@ -74,7 +74,7 @@
                 {% endif %}
 
                 {% if institution or researcher %}
-                    {% if envi != "SANDBOX" %}
+                    {% if 'sandbox' not in request.get_host %}
                         <a class="side-nav-a" href="{% if institution %}{% url 'subscription' institution.id 'institution' %}{% else %}{% url 'subscription' researcher.id 'researcher' %}{% endif %}">
                             <div class="flex-this  side-nav-item {% if 'subscription' in request.path %} selected {% else %} grey-text {% endif %}">
                                 <div class="w-20 margin-right-8"><i class="fa fa-calendar-check-o fa-3x" aria-hidden="true"></i></div>
