feat: resolved issues in some testcases

--- a/templates/public.html
+++ b/templates/public.html
@@ -123,7 +123,8 @@
         </div>
 
         <!-- Boundary Section -->
-        {% if community.share_boundary_publicly and (community.boundary.coordinates or community.boundary.geometry) %}
+        {% if community.share_boundary_publicly %}
+            {% if community.boundary.coordinates or community.boundary.geometry  %}
             <div>
                 <h3>Community Location</h3>
                 <iframe src="{% url 'community-boundary-view' community.id %}" data-testid="community-boundary-iframe"
@@ -141,6 +142,7 @@
                     <br><br>
                 {% endif %}
             </div>
+            {% endif %}
         {% endif %}
 
         <!-- Labels Section -->
